# MY_Assistant

./: README.md  sdkconfig
factory_nvs/: sdkconfig
factory_nvs/squareline/: box_reset_mode.spj
main/: CMakeLists.txt  backup.txt  main.c
main/WebAPI/: chat_api.c  chat_api.h  stt_api.c  stt_api.h
main/app/: app_audio.c  app_sr.c
squareline/: chat_gpt.spj
